--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "jest"
   },
   "author": "Brandon Hufstetler",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "tle.js": "^3.1.0"
+  }
 }
